--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,14 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Jackson JSR310 (Java Time) Module -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.version}</version>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Jakarta Annotations (for @PreDestroy) -->
         <dependency>
             <groupId>jakarta.annotation</groupId>
